# linkedin-automation

./: .gitignore  README.md
backend/: linkedin_post.txt  main.py  pyproject.toml  requirements.txt
backend/database/: db.py
backend/news_agent_crew/: agents.py  crew.py  tasks.py  tools.py
backend/routers/: agent.py  history.py  user.py
backend/scheduler/: jobs.py  scheduler.py
backend/schemas/: agent.py  user.py
backend/services/: email_service.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx
frontend/app/(root)/: page.jsx  page.tsx
frontend/app/agents/: page.jsx
frontend/app/agents/_components/: NewsAgent.jsx
frontend/app/agents/news-agent/: page.jsx
frontend/app/dashboard/: page.jsx
frontend/app/history/: page.jsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/app/user-info/: page.jsx
frontend/components/: Layout.jsx  ThemeToggle.jsx
frontend/components/AppComponents/: InitialDialogBox.jsx  Navbar.jsx  RootNavbar.jsx
frontend/components/Layouts/: NavLayout.jsx
frontend/components/ui/: app-sidebar.jsx
